# airtalk

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
airtalk/: Cargo.toml  build.rs
airtalk-core/: Cargo.toml  build.rs
airtalk-core/assets/: README.md
airtalk-core/src/: config.rs  default_prompt.txt  main.rs  prompt.rs  session.rs  util.rs
airtalk-core/src/asr/: audio.rs  mod.rs  qwen.rs
airtalk-core/src/llm/: mod.rs  openai.rs
airtalk-core/src/vad/: mod.rs  silero.rs
airtalk-core/tests/: integration.rs
airtalk-proto/: Cargo.toml
airtalk-proto/src/: lib.rs
airtalk/assets/: tray_icon.rgba
airtalk/src/: audio.rs  audio_watch.rs  autostart.rs  core_client.rs  device_pref.rs  hotkey.rs  main.rs  overlay.rs  paste.rs  paths.rs  recovery.rs  settings.rs  single_instance.rs  slint_bridge.rs  slint_ui.rs  tray.rs
airtalk/src/settings/: model.rs  secrets.rs  spawn.rs  storage.rs  ui.rs
installer/: airtalk.iss
tools/ctxlab/: ctx_eval.py  probe_foreground.ps1
tools/iconlab/: pyproject.toml
tools/iconlab/iconlab/: cli.py
tools/soundlab/: pyproject.toml
tools/soundlab/soundlab/: cli.py
tools/testkit/: .gitignore  README.md  cleanup_cases.yaml  pyproject.toml
tools/testkit/cases/: combined_long_noisy.yaml  context_boost.yaml  fast_speech.yaml  kernel_homophone.yaml  kernel_homophone_noctx.yaml  kernel_self_prime.yaml  long_monologue.yaml  male_voice.yaml  many_short_segments.yaml  mixed_zh_en.yaml  multi_segment.yaml  noisy_fast_mixed.yaml  short_pauses_merged.yaml  smoke_en.yaml  smoke_ja.yaml  smoke_zh.yaml  very_noisy.yaml  whisper_quiet.yaml  with_loud_white_noise.yaml  with_pink_noise.yaml  with_white_noise.yaml
tools/testkit/prompts/: v1.txt
tools/testkit/testkit/: __init__.py  cli.py  compose.py  core_session.py  driver.py  metrics.py  miccheck.py  promptlab.py  tts.py
