[workspace]
resolver = "2"
members = ["airtalk-proto", "airtalk-core", "airtalk"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = ""

[workspace.dependencies]
airtalk-proto = { path = "airtalk-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
