[package]
name = "airtalk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background computation process for airtalk"

[[bin]]
name = "airtalk-core"
path = "src/main.rs"

[dependencies]
airtalk-proto = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# VAD
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["download-binaries", "ndarray", "std"] }
ndarray = "0.16"

# Audio codec (Opus for ASR upload). See asr/audio.rs.
# audiopus_sys's `static` feature tells it to vendor + build libopus
# (via cmake) and statically link it. audiopus itself is the higher-
# level safe API layer.
audiopus = "0.3.0-rc.0"
audiopus_sys = { version = "0.2", features = ["static"] }
crc = "3"

# Misc
base64 = { workspace = true }

[dev-dependencies]
airtalk-proto = { workspace = true, features = ["tokio"] }
wiremock = "0.6"
serde_json = { workspace = true }
tokio = { workspace = true }
