[package]
name = "airtalk-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared wire protocol between airtalk UI and airtalk-core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { workspace = true }
