[package]
name = "airtalk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Windows UI for airtalk"

[[bin]]
name = "airtalk"
path = "src/main.rs"

[dependencies]
airtalk-proto = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
cpal = "0.15"
tiny-skia = "0.11"
slint = "1.8"

# TODO: pull in as UI components land.
# tray-icon = "0.19"      # or a lower-level Shell_NotifyIcon wrapper

[target.'cfg(windows)'.dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
    "Win32_Security_Credentials",
]
