[package]
name = "airtalk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Windows UI for airtalk"

[[bin]]
name = "airtalk"
path = "src/main.rs"

[build-dependencies]
# Embed icon + VersionInfo into airtalk.exe so it shows properly in
# Alt+Tab, taskbar, and Explorer. Windows-only; `build.rs` no-ops on
# other targets.
winres = "0.1"

[dependencies]
airtalk-proto = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
cpal = "0.15"
tiny-skia = "0.11"
# `raw-window-handle-06` feature: lets us pull the native HWND out of a
# Slint Window so we can apply WS_EX_NOACTIVATE / SWP_NOACTIVATE /
# monitor-anchor positioning that Slint doesn't expose natively. Used by
# the Recovery popup.
slint = { version = "1.8", features = ["raw-window-handle-06"] }
raw-window-handle = "0.6"
# Not used directly — we depend on this purely to enable the `logging`
# feature so Slint's transitive use of icu_provider routes its warnings
# through the `log` crate (instead of raw `eprintln!` stderr prints in
# debug builds). Lets `init_logging`'s filter silence the CJK segmenter
# "No segmentation model for language: ja" spam that fires once per text
# relayout while the Settings window is open.
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }

# TODO: pull in as UI components land.
# tray-icon = "0.19"      # or a lower-level Shell_NotifyIcon wrapper

[target.'cfg(windows)'.dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
    "Win32_Security_Credentials",
    "Win32_System_Registry",
]
