[project]
name = "airtalk-soundlab"
version = "0.1.0"
description = "Generate candidate UI feedback tones for airtalk"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
soundlab = "soundlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soundlab"]
