[project]
name = "airtalk-testkit"
version = "0.1.0"
description = "Audio regression tests for airtalk-core"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.10",
    "pydub>=0.25.1",
    "jiwer>=3.0.3",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "sounddevice>=0.5.0",
    # pydub imports `audioop`, which was removed from the stdlib in
    # Python 3.13. This package is a drop-in backport.
    "audioop-lts>=0.2.1; python_version >= '3.13'",
]

[project.scripts]
testkit = "testkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testkit"]
